--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "scripts" : {
+  "scripts": {
     "dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
@@ -12,6 +12,10 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.3.1",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.37"
   }
 }
